Fixed typo, replaced 'attachements' with 'attachments'.
git-svn-id: file:///var/svn/openmaillist/trunk@88 af08cab8-d604-0410-a591-b642d820b6c0

--- a/design/plain.css
+++ b/design/plain.css
@@ -105,11 +105,11 @@ div.body pre {
 	word-wrap: break-word;		/* IE */
 }
 
-div.attachement {
+div.attachment {
 	margin-top: 1.5em;
 	margin-left: 4em;
 }
-div.attachement ol {
+div.attachment ol {
 	border-top: 1px dashed #cccccc;
 	border-left: 1px dashed #cccccc;
 	list-style-type: upper-roman;	/* I II III IV V... */
