Stylesheet has received some hacks for IE. Unfortunately this piece of crap does neither understand CSS 2.1 nor does it interprete the documents published by W3C properly. Sorry. This closes #4.
git-svn-id: file:///var/svn/openmaillist/trunk@119 af08cab8-d604-0410-a591-b642d820b6c0

--- a/design/plain.css
+++ b/design/plain.css
@@ -72,6 +72,11 @@ li.message dl {
 	border-bottom: 1px dashed #cccccc;
 }
 
+div.header {
+	float: left;
+	width: 100%;
+}
+
 div.header dl {
 	background-color: #efefef;
 }
