A rudimentary RSS feed generator was added. This closes #22.
git-svn-id: file:///var/svn/openmaillist/trunk@132 af08cab8-d604-0410-a591-b642d820b6c0

--- a/design/plain.css
+++ b/design/plain.css
@@ -122,5 +122,21 @@ div.attachment ol {
 	padding-bottom: 0.5em;
 }
 span.quote {
-    color: #0000c0;
+	color: #0000c0;
+}
+
+/* extras for other standards */
+div.rss {
+	margin-top: 0.75em;
+}
+a.rss {
+	text-decoration: none;
+	font-size: smaller;
+}
+cite.rss {
+	background-color: #ff6600;
+	color: #ffffff;
+	padding-left: 2px;
+	padding-right: 1px;
+	font-style: normal;
 }
