Added RSS link to header. This refers to #22 and [132].

--- a/design/plain.css
+++ b/design/plain.css
@@ -129,6 +129,9 @@ span.quote {
 div.rss {
 	margin-top: 0.75em;
 }
+div.rss a.rss {
+	color: #ff6600;
+}
 a.rss {
 	text-decoration: none;
 	font-size: smaller;
