Overview about lists was changed to carry more information about last post.
git-svn-id: file:///var/svn/openmaillist/trunk@156 af08cab8-d604-0410-a591-b642d820b6c0

--- a/static/design/plain.css
+++ b/static/design/plain.css
@@ -58,6 +58,16 @@ table {
 	color: inherit;
 }
 
+/* -- listviw */
+ul.post_def {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+ul.post_def li.nh {
+	padding-left: 2em;
+}
+
 /* -- messages */
 ol.messages {
 	list-style: none;
