Threadview has been designed to display more like common forums.
git-svn-id: file:///var/svn/openmaillist/trunk@157 af08cab8-d604-0410-a591-b642d820b6c0

--- a/static/design/plain.css
+++ b/static/design/plain.css
@@ -58,7 +58,7 @@ table {
 	color: inherit;
 }
 
-/* -- listviw */
+/* -- listview */
 ul.post_def {
 	margin: 0;
 	padding: 0;
@@ -66,6 +66,11 @@ ul.post_def {
 }
 ul.post_def li.nh {
 	padding-left: 2em;
+}
+
+/* -- threadview */
+table.threads td.subj, table.threads th.subj {
+	width: 50%;
 }
 
 /* -- messages */
